--- a/templates/components/ob-custom/ob-header.html
+++ b/templates/components/ob-custom/ob-header.html
@@ -6,9 +6,9 @@
 
     <div class="top-bar-right">
       <ul class="clearfix">
-        <li class="navUser-item"><a href="#">ABOUT US</a>|</li>
-        <li class="navUser-item"><a href="#">BLOG</a>|</li>
-        <li class="navUser-item"><a href="#">CUSTOMER SUPPORT</a></li>
+        <li class="navUser-item"><a href="/about-us/">ABOUT US</a>|</li>
+        <li class="navUser-item"><a href="/blog/">BLOG</a>|</li>
+        <li class="navUser-item"><a href="/customer-support/">CUSTOMER SUPPORT</a></li>
       </ul>
     </div>
   </div>
