--- a/templates/components/ob-custom/ob-navigation.html
+++ b/templates/components/ob-custom/ob-navigation.html
@@ -39,7 +39,7 @@
                 <span class="navUser-item-cartLabel">
                   <svg class="cart-icon"><use xlink:href="#icon-header-icon-cart"></use></svg>
                 </span>
-                <span class="countPill{{#if cart.items}} countPill--positive{{/if}} cart-quantity">{{cart.quantity}}</span>
+                <span class="countPill{{#if cart.items}} countPill--positive{{/if}} cart-quantity">0{{cart.quantity}}</span>
             </a>
 
             <div class="dropdown-menu" id="cart-preview-dropdown" data-dropdown-content aria-hidden="true"></div>
